# zuti

./: .env  .env.example  .gitignore  Cargo.toml  README.md  create-db.sh  create-env.sh  db.sqlite  test.sh
certs/: cert.pem  key.pem
migrations/2025-03-10-080000_create_users/: up.sql
migrations/2026-03-10-090405-0000_add_unique_index_on_name/: down.sql  up.sql
migrations/2026-03-10-093310-0000_add_password_to_users/: down.sql  up.sql
src/: a.sh  disk_checker.rs  main.rs  models.rs  schema.rs
src/apis/: disks.rs  mod.rs
src/disk/: free.rs  lsblk.rs  mod.rs  zfs.rs
src/jwt/: jwt.rs
