[package]
name = "https-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
