[package]
name = "zuti"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.13.0", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
chrono = "0.4"
pam = "0.8"
